# Python-Modules

./: to_be_gitignore
M00/: to_be_gitignore  to_do.md
M00/ex0/: ft_hello_garden.py
M00/ex1/: ft_plot_area.py
M00/ex2/: ft_harvest_total.py
M00/ex3/: ft_plant_age.py
M00/ex4/: ft_water_reminder.py
M00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
M00/ex6/: ft_garden_summary.py
M00/ex7/: ft_seed_inventory.py
M01/: ft_garden_intro.py  ft_plant_factory.py  ft_plant_growth.py  to_be_gitignore  to_be_gitignore_1  to_do.md
M01/ex0/: ft_garden_intro.py
M01/ex1/: ft_garden_data.py
M01/ex2/: expected  ft_plant_growth.py
M01/ex3/: ft_plant_factory.py
M01/ex4/: ft_garden_security.py
M01/ex5/: ft_plant_types.py
M01/ex6/: expected  ft_garden_analytics.py
M01/unused/: ft_garden_data_v1.py  ft_garden_data_v2.py
M02/: to_do.md
M03/: to_do.md
M05/: to_do.md
M06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py  to_be_gitignore  to_do.md
M07/: battle.py  capacitor.py  expected_ex1  expected_ex2  mine_ex0  mine_ex2  to_be_gitignore  to_do.md  tournament.py
M08/: to_be_gitignore  to_do.md
M08/ex1/: loading.py  pyproject.toml
M09/: .gitignore  expected_ex2  mine_ex2  to_begitignore  to_do.md
M10/: to_begitignore  to_do.md
new_M02/: to_do.md
new_M03/: to_be_gitignore_3  to_do.md
new_M04/: to_be_gitignore  to_do.md
(+100 files in other folders)
