[tool.poetry]
name = "loading"
version = "0.1.0"
description = ""
authors = ["juliatav"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
matplotlib = ">=3.7.2"
# requests = ">=2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
